@@ -17,6 +17,7 @@ dillo-2.1
  - Set prefs.vw_fontname as deafult font for the UI.
  - Fix: recover page focus when clicking-out of a widget.
  - Fixed a segfault bug in the test/ directory.
+ - Set middle click to submit in a new TAB. (Helps to keep form data!)
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
